--- a/css/script.css
+++ b/css/script.css
@@ -117,33 +117,20 @@ input[type="text"]:hover, input[type="date"]:hover, input[type="text"]:visited, 
     border:5px solid #a9d1b3;
 }
 
-.botao a{
-    text-decoration: none;
-    margin-left: 1px;
-    padding-left: 5px;
-    font-size: 20px;
-    border-radius: 10px 30px 10px 30px;
-    border-style:solid;
-    border-width: 1px;
-    padding: 12px;
-    color:rgb(0, 0, 0);
-    border-color: rgb(0, 0, 0);
-}
 
-a:link, a:visited, a:active {
-    text-decoration: none;
-    background-color:rgb(0, 0, 0);
-    color:rgb(237, 250, 250);
-    transition: 0.8s;
+@media (max-width: 875px){
 
+    h1{
+        font-size: 30px;
+    }
+    header, main, footer, hr{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    main{
+        flex-direction: column;
+    }
+    main .botao{
+        align-items: text;
+    }
 }
-a:hover { 
-    transition: 0.3s;
-    text-decoration:none; 
-    background-color:rgb(134, 39, 39);
-    color:rgb(237, 250, 250);
-    padding: 12px;
-    border-radius: 30px 10px 30px 10px;
-    border-color: rgb(134, 39, 39);
-}
-
